prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__append_group.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nselect { invoice_date, invoice_id, customer_id }\nappend (\n  from invoices\n  select { invoice_date, invoice_id, customer_id }\n)\ngroup { customer_id } (aggregate { count = count invoice_id, invoice_date })\n"
input_file: prqlc/prqlc/tests/integration/queries/append_group.prql
---
WITH table_0 AS (
  SELECT
    invoice_date,
    invoice_id,
    customer_id
  FROM
    invoices
),
table_1 AS (
  SELECT
    invoice_date,
    customer_id
  FROM
    invoices
  UNION
  ALL
  SELECT
    *
  FROM
    table_0
)
SELECT
  customer_id,
  COUNT(*) AS count,
  invoice_date
FROM
  table_1
GROUP BY
  customer_id
