prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__group_sort_derive_select_join.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "s\"SELECT album_id,title,artist_id FROM albums\"\ngroup {artist_id} (aggregate { album_title_count = count this.`title`})\nsort {this.artist_id, this.album_title_count}\nderive {new_album_count = this.album_title_count}\nselect {this.artist_id, this.new_album_count}\njoin side:left ( s\"SELECT artist_id,name as artist_name FROM artists\" ) (this.artist_id == that.artist_id)\n"
input_file: prqlc/prqlc/tests/integration/queries/group_sort_derive_select_join.prql
---
WITH
table_0 AS (
  SELECT
    album_id,
    title,
    artist_id
  FROM
    albums
),
table_4 AS (
  SELECT
    artist_id,
    COUNT(*) AS _expr_0
  FROM
    table_0
  GROUP BY
    artist_id
),
table_2 AS (
  SELECT
    artist_id,
    _expr_0 AS new_album_count,
    _expr_0
  FROM
    table_4
),
table_1 AS (
  SELECT
    artist_id,
    name as artist_name
  FROM
    artists
),
table_3 AS (
  SELECT
    table_2.artist_id,
    table_2.new_album_count,
    table_1.artist_id AS _expr_1,
    table_1.artist_name,
    table_2._expr_0
  FROM
    table_2
    LEFT OUTER JOIN table_1 ON table_2.artist_id = table_1.artist_id
)
SELECT
  artist_id,
  new_album_count,
  _expr_1,
  artist_name
FROM
  table_3
ORDER BY
  artist_id,
  new_album_count
