prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__group_sort_filter_derive_select_join.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "s\"SELECT album_id,title,artist_id FROM albums\"\ngroup {artist_id} (aggregate { first_album_title = min this.`title`})\nsort {this.artist_id, this.first_album_title}\nfilter (this.first_album_title | text.length) > 10\nderive {new_album_title = this.first_album_title}\nselect {this.artist_id, this.new_album_title}\njoin side:left ( s\"SELECT artist_id,name as artist_name FROM artists\" ) (this.artist_id == that.artist_id)\n"
input_file: prqlc/prqlc/tests/integration/queries/group_sort_filter_derive_select_join.prql
---
WITH table_0 AS (
  SELECT
    album_id,
    title,
    artist_id
  FROM
    albums
),
table_3 AS (
  SELECT
    artist_id,
    MIN(title) AS _expr_0
  FROM
    table_0
  GROUP BY
    artist_id
),
table_4 AS (
  SELECT
    artist_id,
    _expr_0 AS new_album_title,
    _expr_0
  FROM
    table_3
  WHERE
    CHAR_LENGTH(_expr_0) > 10
),
table_2 AS (
  SELECT
    artist_id,
    new_album_title,
    _expr_0
  FROM
    table_4
),
table_1 AS (
  SELECT
    artist_id,
    name as artist_name
  FROM
    artists
)
SELECT
  table_2.artist_id,
  table_2.new_album_title,
  table_1.artist_id,
  table_1.artist_name
FROM
  table_2
  LEFT OUTER JOIN table_1 ON table_2.artist_id = table_1.artist_id
ORDER BY
  table_2.artist_id,
  table_2.new_album_title
